#
# People package
#
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "people"
version = "0.1.0"
authors = [{ "name" = "DINUM", "email" = "dev@mail.numerique.gouv.fr" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 5",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
description = "An application to handle contacts and teams."
keywords = ["Django", "Contacts", "Teams", "RBAC"]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3==1.34.59",
    "Brotli==1.1.0",
    "celery[redis]==5.3.6",
    "django-configurations==2.5",
    "django-cors-headers==4.3.1",
    "django-countries==7.5.1",
    "django-parler==2.3",
    "redis==4.6.0",
    "django-redis==5.3.0",
    "django-storages==1.14.2",
    "django-timezone-field>=5.1",
    "django==5.0.3",
    "djangorestframework==3.14.0",
    "drf_spectacular==0.27.1",
    "dockerflow==2024.3.0",
    "easy_thumbnails==2.8.5",
    "factory_boy==3.3.0",
    "gunicorn==21.2.0",
    "jsonschema==4.21.1",
    "nested-multipart-parser==1.5.0",
    "psycopg[binary]==3.1.18",
    "PyJWT==2.8.0",
    "requests==2.31.0",
    "sentry-sdk==1.41.0",
    "url-normalize==1.4.3",
    "whitenoise==6.6.0",
    "mozilla-django-oidc==4.0.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/numerique-gouv/people/issues/new"
"Changelog" = "https://github.com/numerique-gouv/people/blob/main/CHANGELOG.md"
"Homepage" = "https://github.com/numerique-gouv/people"
"Repository" = "https://github.com/numerique-gouv/people"

[project.optional-dependencies]
dev = [
    "django-extensions==3.2.3",
    "drf-spectacular-sidecar==2024.3.4",
    "ipdb==0.13.13",
    "ipython==8.22.2",
    "pyfakefs==5.3.5",
    "pylint-django==2.5.5",
    "pylint==3.1.0",
    "pytest-cov==4.1.0",
    "pytest-django==4.8.0",
    "pytest==8.1.1",
    "pytest-icdiff==0.9",
    "pytest-xdist==3.5.0",
    "responses==0.25.0",
    "ruff==0.3.2",
    "types-requests==2.31.0.20240311",
    "freezegun==1.4.0",
]

[tool.setuptools]
packages = { find = { where = ["."], exclude = ["tests"] } }
zip-safe = true

[tool.distutils.bdist_wheel]
universal = true

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "build",
    "venv",
    "__pycache__",
    "*/migrations/*",
]
line-length = 88


[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "BLE", # flake8-blind-except
    "C4", # flake8-comprehensions
    "DJ", # flake8-django
    "I", # isort
    "PLC", # pylint-convention
    "PLE", # pylint-error
    "PLR", # pylint-refactoring
    "PLW", # pylint-warning
    "RUF100", # Ruff unused-noqa
    "RUF200", # Ruff check pyproject.toml
    "S", # flake8-bandit
    "SLF", # flake8-self
    "T20", # flake8-print
]
ignore= ["DJ001", "PLR2004"]

[tool.ruff.lint.isort]
section-order = ["future","standard-library","django","third-party","people","first-party","local-folder"]
sections = { people=["core"], django=["django"] }

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S", "SLF"]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--cov-report",
    "term-missing",
    # Allow test files to have the same name in different directories.
    "--import-mode=importlib",
]
python_files = [
    "test_*.py",
    "tests.py",
]
